--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -9,6 +9,10 @@
             android:icon="@drawable/ic_baseline_person_24"
             android:title="@string/menu_profile" />
         <item
+            android:id="@+id/nav_newnotes"
+            android:icon="@drawable/ic_baseline_note_add_24"
+            android:title="@string/menu_newnotes" />
+        <item
             android:id="@+id/nav_notes"
             android:icon="@drawable/ic_baseline_note_24"
             android:title="@string/menu_notes" />
